# arc-agent

./: .env.example  .gitignore  .mcp.json  AGENTS.md  LICENSE  Makefile  README.md
backend/: README.md  agent.py  bridge_client.py  langgraph.json  mcp_remote_client.py  mcp_server.py  pyproject.toml  token_limit_middleware.py  tool_registry.py  tracing.py
backend/tools/: arc.py  history.py
bridge/: bridge_server.py
docker/: compose.addons.yml  compose.yml
docs/plan/: plan.md
docs/script/: README.md  generate-diagram-pngs.cjs  package-lock.json  package.json
docs/script/puml/: aa-responsibilities.puml  aa-running-state-internal-flow.puml  aa-thread-lifecycle-overview.puml  arc-agent-1.puml  arc-agent-2.puml
frontend/: .dockerignore  .env.example  Dockerfile  package.json  pnpm-lock.yaml
frontend/apps/web/src/app/: globals.css
frontend/apps/web/src/components/thread/: index.tsx  markdown-styles.css
frontend/apps/web/src/components/thread/history/: index.tsx
frontend/apps/web/src/components/thread/messages/: ai.tsx  generic-interrupt.tsx  hitl-review.tsx  token-limit-interrupt.tsx  tool-calls.tsx
frontend/apps/web/src/components/ui/: switch.tsx  theme-toggle.tsx
frontend/apps/web/src/lib/: agent-inbox-interrupt.ts
frontend/apps/web/src/providers/: Stream.tsx  Thread.tsx
scripts/: start_backend.sh  start_backend_up.sh  start_bridge.sh  start_db.sh  start_frontend.sh  start_local_stack.sh  start_stack_up.sh  stop_db.sh
