[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arc-agent"
version = "0.1.0"
description = "AI agent for controlling Arc browser on macOS"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.10",
    "langchain-openai>=1.1.10",
    "langfuse>=3.14.5",
    "langgraph>=1.0.10",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "langsmith>=0.7.14",
    "mcp[cli]>=1.26.0",
]

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.4.14",
    "ruff>=0.15.5",
]

[tool.setuptools]
py-modules = ["agent", "mcp_remote_client", "mcp_server", "tool_registry", "tracing"]
packages = ["tools"]
